fix: overflow mobile settings not working

--- a/styles/global.css
+++ b/styles/global.css
@@ -5,6 +5,18 @@
   z-index: 999999;
 }
 
+html {
+  overflow: hidden;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
 body {
   overflow-x: hidden;
+  position: relative;
+  /* box-sizing: border-box; */
+  margin: 0;
+  height: 100%;
 }
